# dpytaylo-website

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.py  compose.yml  run.py  strunk.py  tailwind.config.js  trunk.py
app/: Cargo.toml
app/src/: error_template.rs  lib.rs  utils.rs
app/src/atoms/: anchor.rs  external_anchor.rs  knowledge_level.rs  masonry.rs  mod.rs  select.rs  select_option.rs
app/src/components/: footer.rs  header.rs
app/src/pages/: contacts.rs  error_page_template.rs  home.rs  mod.rs
app/src/pages/about_me/: mod.rs  pet_projects.rs  short_overview.rs  technologies.rs
backend/: Cargo.toml
backend/src/: main.rs
canvas/: Cargo.toml
canvas/src/: app.rs  canvas.rs  cube.rs  lib.rs
common/: Cargo.toml
common/src/: canvas_context.rs  lib.rs  root_message.rs
engine/: Cargo.toml
engine/src/: camera.rs  context.rs  event_handler.rs  lib.rs  material.rs  material_render_state.rs  model3d.rs  object.rs  plugins.rs  scene.rs  shader.frag  world.rs  wos.rs
engine/src/graphics/: extensions.rs  material.rs  material_data.rs  mesh.rs  mesh_data.rs  mod.rs  model_data.rs  pnt_vertex.rs  render_config.rs  render_data.rs  render_state.rs  scene_render_data.rs  texture.rs  uniforms.rs  vertex.rs
engine/src/resource_manager/: mod.rs  resource.rs  resource_vec.rs
engine/src/utils/smart_pointers/: carc.rs  crc.rs
frontend/: Cargo.toml  index.html
frontend/src/: event_handler.rs  lib.rs  loop_context.rs  main.rs  main_context.rs  material_render_state.rs  object.rs  plugins.rs  root.rs  root_context.rs  shader.vert  sprite3d.rs
frontend/src/graphics/: graphics_context.rs  mesh.rs  mod.rs  render_data.rs  render_state.rs  shader_program.rs  texture.rs  world_render_data.rs
frontend/src/resource_manager/: mod.rs  resource_pointer.rs
frontend/src/utils/smart_pointers/: crc_vec.rs  mod.rs
server/: Cargo.toml
server/src/: fileserv.rs  main.rs
style/: input.css
