[workspace]
resolver = "2"
members = ["app", "frontend", "server"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# need to be applied only to wasm build
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.dependencies]
axum = "=0.7.5"
cfg-if = "=1.0.0"
chrono = "=0.4.38"
console_error_panic_hook = "=0.1.7"
icondata = "=0.3.1"
http = "=1.1.0"
leptos = { version = "=0.6.12", features = ["nightly"] }
leptos_axum = "=0.6.12"
leptos_icons = "=0.3.1"
leptos_meta = { version = "=0.6.12", features = ["nightly"] }
leptos_router = { version = "=0.6.12", features = ["nightly"] }
leptos-use = "=0.10.10"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "=1.0.61"
tokio = { version = "=1.38.0", features = ["full"] }
tower = { version = "=0.4.13", features = ["full"] }
tower-http = { version = "=0.5.2", features = ["full"] }
tracing = "=0.1.40"
tracing-subscriber = "=0.3.18"
tracing-wasm = "=0.2.1"
uuid = { version = "1.9.1", features = ["v7"] }
wasm-bindgen = "=0.2.92"

# See https://github.com/akesson/cargo-leptos for documentation of all the parameters.

# A leptos project defines which workspace members
# that are used together frontend (lib) & server (bin)
[[workspace.metadata.leptos]]
# this name is used for the wasm, js and css file names
name = "main"

# the package in the workspace that contains the server binary (binary crate)
bin-package = "server"

# the package in the workspace that contains the frontend wasm binary (library crate)
lib-package = "frontend"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

tailwind-input-file = "style/input.css"

# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = []

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = []

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false
