[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true, optional = true }
icondata.workspace = true
leptos.workspace = true
leptos_icons.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos-use.workspace = true
strum.workspace = true
tracing.workspace = true
uuid.workspace = true

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "uuid/js"]
ssr = ["dep:chrono", "dep:leptos_axum", "leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "leptos-use/ssr"]

[dev-dependencies]
tokio.workspace = true
