[package]
name = "canvas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"

# blend-bindgen-rs = "0.5.0"
# blend-inspect-rs = "0.3.0"
# blend-rs = "0.3.0"

common = { path = "../common" }
console_error_panic_hook = "0.1.7"
engine = { path = "../engine" }
itertools = "0.10.5"
getrandom = { version = "0.2", features = ["js"] }
gloo = "0.8.0"
js-sys = "0.3"
log = "0.4"

nalgebra = "0.32.1"
nalgebra-glm = "0.18.0"

png = "0.17.7"
serde = "1.0"
scopeguard = "1.1.0"
thiserror = "1.0.38"
tobj = { version = "3.2.4", features = ["async"] }

wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"

yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"

[dependencies.web-sys]
version = "0.3.60"
features = [
  'ImageData',
  'HtmlCanvasElement',
  'Performance',
  'PerformanceTiming',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGlProgram',
  'WebGl2RenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
]